--- a/Body_Fat_Estimator.ipynb
+++ b/Body_Fat_Estimator.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOIMSjlbaxNvRaJQjLu+yX0",
+      "authorship_tag": "ABX9TyMp9xs1BsM1KPZ7g/xjSWpX",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -27,6 +27,90 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "## **Building a body fat estimator using ML can have various practical uses, from helping individuals monitor their health to assisting healthcare professionals in assessing patients' body composition.**\n",
+        "\n",
+        "List of features that can be used in Body Fat Estimator project. Here's a brief description of each feature:\n",
+        "\n",
+        "**Density**: This is likely the body density of the individual, which is often measured using techniques like weighing. It's an important feature as it's directly related to body composition.\n",
+        "\n",
+        "**BodyFat**: This is the target variable we want to predict - the body fat percentage of the individual.\n",
+        "\n",
+        "**Age**: The age of the individual can be a relevant factor as body composition tends to change with age.\n",
+        "\n",
+        "**Weight**: The individual's weight is a fundamental feature for estimating body fat percentage.\n",
+        "\n",
+        "**Height**: Height is also an essential feature as it helps in calculating body mass index (BMI) and can be related to body fat.\n",
+        "\n",
+        "**Neck**: Neck circumference is one of the body measurements used to estimate body fat percentage. It's often considered a good predictor.\n",
+        "\n",
+        "**Chest**: Chest circumference is another measurement that can be useful in estimating body fat percentage, especially for men.\n",
+        "\n",
+        "**Abdomen**: Abdominal circumference is a critical feature for estimating body fat, as fat tends to accumulate in this area.\n",
+        "\n",
+        "**Hip**: Hip circumference is often considered in body fat estimation models, especially for women.\n",
+        "\n",
+        "**Thigh**: Thigh circumference is another body measurement that can be informative for body fat estimation.\n",
+        "\n",
+        "**Knee**: Knee circumference may be included in some models, though it's not as common as other measurements.\n",
+        "\n",
+        "**Ankle**: Ankle circumference may be considered, but it's less common and might have a weaker correlation with body fat.\n",
+        "\n",
+        "**Biceps**: Biceps circumference can be relevant, especially for estimating muscle mass.\n",
+        "\n",
+        "**Forearm**: Forearm circumference is another measurement that can be used to assess muscle mass.\n",
+        "\n",
+        "**Wrist**: Wrist circumference may be used in certain body fat estimation models, although it's not as commonly included as other measurements.\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "cw9hLUn0SVjh"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Project Pipeline** :\n",
+        "\n",
+        "The various steps involved in the Machine Learning Pipeline are :\n",
+        "\n",
+        "1️⃣ Import Necessary Dependencies.\n",
+        "\n",
+        "2️⃣ Read and Load the Dataset.\n",
+        "\n",
+        "3️⃣ Exploratory Data Analysis.\n",
+        "\n",
+        "4️⃣ Data Visualization of Target Variables.\n",
+        "\n",
+        "5️⃣ Data Preprocessing.\n",
+        "\n",
+        "6️⃣ Data Visualization after Preprocessing.\n",
+        "\n",
+        "7️⃣ Splitting our data into Train and Test Subset.\n",
+        "\n",
+        "8️⃣ Function for Model Evaluation.\n",
+        "\n",
+        "9️⃣ Model Building.\n",
+        "\n",
+        "1️⃣0️⃣Conclusion."
+      ],
+      "metadata": {
+        "id": "QhHzigz_fcSD"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "1️⃣ **Import Necessary Dependencies.**\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "snYIt_SSQKwo"
+      }
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
@@ -39,6 +123,19 @@
         "import seaborn as sns\n",
         "import matplotlib.pyplot as plt"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "2️⃣ **Read and Load the Dataset.**\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "RaS0ZjLMQPy_"
+      }
     },
     {
       "cell_type": "code",
@@ -865,6 +962,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "3️⃣ **Exploratory Data Analysis.**"
+      ],
+      "metadata": {
+        "id": "yE5QdfrRQVJ3"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "for i in df.columns:\n",
@@ -1291,6 +1397,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "4️⃣ **Data Visualization of Target Variables.**\n"
+      ],
+      "metadata": {
+        "id": "gL9IxQfxQt2w"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "import scipy.stats as stats"
@@ -1609,6 +1724,15 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "5️⃣ **Data Preprocessing.**"
+      ],
+      "metadata": {
+        "id": "7l7PF1szRLqq"
+      }
     },
     {
       "cell_type": "code",
@@ -1959,6 +2083,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "6️⃣ **Data Visualization after Preprocessing.**"
+      ],
+      "metadata": {
+        "id": "icNucpZHRfow"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "series = pd.Series(et.feature_importances_, index = train.columns)\n",
@@ -2161,6 +2294,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "7️⃣ **Splitting our data into Train and Test Subset.**"
+      ],
+      "metadata": {
+        "id": "PrS9kYDnRtAr"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "X = df.drop('BodyFat',axis = 1)\n",
@@ -2173,6 +2315,15 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "8️⃣ **Function for Model Evaluation.**"
+      ],
+      "metadata": {
+        "id": "t6FZtdKMR6uU"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "from sklearn.model_selection import train_test_split\n",
@@ -2183,6 +2334,15 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "9️⃣ **Model Building.**"
+      ],
+      "metadata": {
+        "id": "kBdzbXjuRxsu"
+      }
     },
     {
       "cell_type": "code",
@@ -2335,6 +2495,18 @@
           "execution_count": 103
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "\n",
+        "1️⃣0️⃣Conclusion.\n",
+        "\n",
+        "To develop your Body Fat Estimator model, we can use some or all of these features as input variables and train your machine learning model to predict the \"BodyFat\" feature based on the other measurements. Feature selection and engineering can help you determine which combination of features provides the best predictive power for our model. In this prediction Linear Regression performs very well.\n"
+      ],
+      "metadata": {
+        "id": "Lvq5oGphSAmu"
+      }
     },
     {
       "cell_type": "code",
