--- a/Body_Fat_Estimator.ipynb
+++ b/Body_Fat_Estimator.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMp9xs1BsM1KPZ7g/xjSWpX",
+      "authorship_tag": "ABX9TyOcFmaVJb9/0w2gOysebtfb",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,7 +29,16 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## **Building a body fat estimator using ML can have various practical uses, from helping individuals monitor their health to assisting healthcare professionals in assessing patients' body composition.**\n",
+        "## **Building Body Fat Estimator**"
+      ],
+      "metadata": {
+        "id": "PNVQaBCyVarl"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Building a body fat estimator using ML can have various practical uses, from helping individuals monitor their health to assisting healthcare professionals in assessing patients' body composition.**\n",
         "\n",
         "List of features that can be used in Body Fat Estimator project. Here's a brief description of each feature:\n",
         "\n",
