--- a/Credit_card_fraud_detection.ipynb
+++ b/Credit_card_fraud_detection.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMLcZmWqH2l3SivA5AezcSg",
+      "authorship_tag": "ABX9TyNulsi92xCh3qLh8y0u20Zt",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -25,6 +25,64 @@
       "source": [
         "<a href=\"https://colab.research.google.com/github/Imshubhham/Imshubham/blob/main/Credit_card_fraud_detection.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## **Credit Card Fraud Detection using Machine Learning**"
+      ],
+      "metadata": {
+        "id": "j3TTA3ITC2V9"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Credit card fraud is a prevalent and costly problem in the banking and financial industry. Detecting fraudulent transactions is crucial to protect both cardholders and financial institutions. Machine learning techniques offer an effective approach to identify fraudulent activities by analyzing transaction data. This project aims to develop a credit card fraud detection system using machine learning algorithms."
+      ],
+      "metadata": {
+        "id": "mTjksHJHC_WF"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Project Pipeline :\n",
+        "\n",
+        "The various steps involved in the Machine Learning Pipeline are :\n",
+        "\n",
+        "1️⃣ Import Necessary Dependencies.\n",
+        "\n",
+        "2️⃣ Read and Load the Dataset.\n",
+        "\n",
+        "3️⃣ Exploratory Data Analysis.\n",
+        "\n",
+        "4️⃣ Data Visualization of Target Variables.\n",
+        "\n",
+        "5️⃣ Data Preprocessing.\n",
+        "\n",
+        "6️⃣ Data Visualization after Preprocessing.\n",
+        "\n",
+        "7️⃣ Splitting our data into Train and Test Subset.\n",
+        "\n",
+        "8️⃣ Function for Model Evaluation.\n",
+        "\n",
+        "9️⃣ Model Building.\n",
+        "\n",
+        "1️⃣0️⃣Conclusion.\n"
+      ],
+      "metadata": {
+        "id": "2VAGGXQhBa0x"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "1️⃣ Import Necessary Dependencies."
+      ],
+      "metadata": {
+        "id": "4J152fUVBfgk"
+      }
     },
     {
       "cell_type": "code",
@@ -50,6 +108,15 @@
         "from sklearn.metrics import accuracy_score,precision_score,recall_score,f1_score,confusion_matrix\n",
         "from sklearn.metrics import confusion_matrix"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "2️⃣ Read and Load the Dataset."
+      ],
+      "metadata": {
+        "id": "7hi57syaBjME"
+      }
     },
     {
       "cell_type": "code",
@@ -1840,6 +1907,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "3️⃣ Exploratory Data Analysis."
+      ],
+      "metadata": {
+        "id": "mDIjAdLBBobl"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "correlation_matrix = df.corr()\n",
@@ -1928,6 +2004,15 @@
           "execution_count": 118
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "4️⃣ Data Visualization of Target Variables.\n"
+      ],
+      "metadata": {
+        "id": "beSHvJC9BuZV"
+      }
     },
     {
       "cell_type": "code",
@@ -2064,6 +2149,15 @@
           "execution_count": 123
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "5️⃣ Data Preprocessing.\n"
+      ],
+      "metadata": {
+        "id": "KAeykrvBB2cl"
+      }
     },
     {
       "cell_type": "code",
@@ -2953,6 +3047,16 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "6️⃣ **Data Visualization after Preprocessing.**\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "WUiXs5DhCchl"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "value_counts = new_dataset['Class'].value_counts()\n",
@@ -3232,6 +3336,16 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "7️⃣ Splitting our data into Train and Test Subset.\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "Gq1rFvN5CBzU"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "X = new_dataset.drop(columns='Class', axis=1)\n",
@@ -3242,6 +3356,15 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "8️⃣ Function for Model Evaluation.\n"
+      ],
+      "metadata": {
+        "id": "4WN47zlNCIY0"
+      }
     },
     {
       "cell_type": "code",
@@ -3277,6 +3400,16 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "\n",
+        "9️⃣ **Model Building.**\n"
+      ],
+      "metadata": {
+        "id": "uYJYVdzZCG1U"
+      }
     },
     {
       "cell_type": "code",
@@ -3617,7 +3750,16 @@
     {
       "cell_type": "markdown",
       "source": [
-        "I this Credit card fraud detection Random forest and logistic regression is performing very well, gives 93% of accuracy.."
+        "1️⃣0️⃣Conclusion."
+      ],
+      "metadata": {
+        "id": "0PF1jYsWCQj2"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Credit card fraud detection using machine learning is a critical application that has a significant impact on the financial industry. This project aims to develop a robust and accurate fraud detection system that contributes to a safer and more secure banking environment. In this Credit card fraud detection Random forest and logistic regression is performing very well, gives 93% of accuracy."
       ],
       "metadata": {
         "id": "DCl-itZAgfEC"
