--- a/S&P_500_Stock__dataset.ipynb
+++ b/S&P_500_Stock__dataset.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNM6i0pT4twLTKqR+ifz9KO",
+      "authorship_tag": "ABX9TyO1jBQJ5Bh89JhEDk8cs6yS",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,10 +29,50 @@
     {
       "cell_type": "markdown",
       "source": [
+        "Project Pipeline :\n",
+        "\n",
+        "The various steps involved in the Machine Learning Pipeline are :\n",
+        "\n",
+        "1️⃣ Import Necessary Dependencies.\n",
+        "\n",
+        "2️⃣ Read and Load the Dataset.\n",
+        "\n",
+        "3️⃣ Exploratory Data Analysis.\n",
+        "\n",
+        "4️⃣ Data Visualization of Target Variables.\n",
+        "\n",
+        "5️⃣ Data Preprocessing.\n",
+        "\n",
+        "6️⃣ Data Visualization after Preprocessing.\n",
+        "\n",
+        "7️⃣ Splitting our data into Train and Test Subset.\n",
+        "\n",
+        "8️⃣ Function for Model Evaluation.\n",
+        "\n",
+        "9️⃣ Model Building.\n",
+        "\n",
+        "1️⃣0️⃣Conclusion."
+      ],
+      "metadata": {
+        "id": "3DAdFFQAPv-e"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "From Standard and poor's dataset using APPLE data to apply Time series"
       ],
       "metadata": {
         "id": "ioIOeS00bVmz"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "1️⃣ Import Necessary Dependencies."
+      ],
+      "metadata": {
+        "id": "8MtMGZbHPzOM"
       }
     },
     {
@@ -46,8 +86,17 @@
       "metadata": {
         "id": "eTpWyVLo-cGH"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "2️⃣ Read and Load the Dataset."
+      ],
+      "metadata": {
+        "id": "Oyo3baDTP3Kt"
+      }
     },
     {
       "cell_type": "code",
@@ -57,7 +106,7 @@
       "metadata": {
         "id": "kVASxQxu_7C0"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -73,7 +122,7 @@
         "id": "wqBY1D5RAByF",
         "outputId": "47e92b9c-6fc1-4539-c726-7ce170a86474"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -334,7 +383,7 @@
         "id": "lLT9t0jEAB04",
         "outputId": "cc216288-7b0d-4730-9fd3-5e030aa5e969"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -609,7 +658,7 @@
         "id": "uw0K659mAB3_",
         "outputId": "141329cb-56c0-4309-82b0-8c965ec3ddc4"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -645,7 +694,7 @@
         "id": "P3uSBmBpAB6o",
         "outputId": "9a8672d4-65c3-43df-fcde-0004c0fe4f9c"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -674,7 +723,7 @@
       "metadata": {
         "id": "0poRKTQMSdCQ"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -689,7 +738,7 @@
         "id": "Ke9G3X3GAB9t",
         "outputId": "cac6d30d-c0f7-4c48-d4e6-b8e1f170aeec"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -704,6 +753,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "3️⃣ Exploratory Data Analysis."
+      ],
+      "metadata": {
+        "id": "CC0awCskP74t"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "sns.heatmap(df.corr(), annot=True)"
@@ -716,7 +774,7 @@
         "id": "sPiBOxWOACAz",
         "outputId": "25341282-e1c4-4820-ca96-3c58e63d5904"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -760,7 +818,7 @@
         "id": "ksmielc9EBes",
         "outputId": "61d0f0ba-0f7d-4139-f82c-8a34d8d06043"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -789,7 +847,7 @@
       "metadata": {
         "id": "iMZwXqdvEDI0"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -804,7 +862,7 @@
         "id": "T86FExclEvoR",
         "outputId": "076ee552-4289-4e7a-ced7-a62d5dfd7338"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -829,6 +887,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "4️⃣ Data Visualization of Target Variables."
+      ],
+      "metadata": {
+        "id": "66PVwx6yQEnW"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "df['Name'].value_counts()"
@@ -840,7 +907,7 @@
         "id": "5SaQynCFTDf7",
         "outputId": "b703dca2-38db-479e-b11d-537d92cabdf4"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -909,6 +976,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "5️⃣ Data Preprocessing."
+      ],
+      "metadata": {
+        "id": "fcN3K-1RQLC8"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "df.set_index('Name', inplace=True)\n",
@@ -922,7 +998,7 @@
         "id": "9saRbYzRUFHO",
         "outputId": "a19e7012-1714-4f31-d2ff-3d8105555af4"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1158,7 +1234,7 @@
         "id": "jDPiTBsCUf3-",
         "outputId": "1cf7c179-6a08-43b9-ae53-98a5e98bd25a"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1381,6 +1457,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "6️⃣ Data Visualization after Preprocessing."
+      ],
+      "metadata": {
+        "id": "hqLuETDNQRgc"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "df2 = df1.reset_index()['close']"
@@ -1388,7 +1473,7 @@
       "metadata": {
         "id": "4qsZen9GXlxx"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1404,7 +1489,7 @@
         "id": "m90T7rx2Uf7Y",
         "outputId": "798f4876-5427-4b39-98da-e1f7624c4cd7"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1447,7 +1532,7 @@
       "metadata": {
         "id": "gU6AX5e-YCpG"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1462,7 +1547,7 @@
         "id": "rYhlCACtYCr_",
         "outputId": "3246046f-76ae-4671-87b4-f4e5ca2ab98d"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1493,7 +1578,7 @@
       "metadata": {
         "id": "61lx5ue3YCux"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1508,7 +1593,7 @@
         "id": "kdtqomq-YCyY",
         "outputId": "1757d526-f03a-4f1a-deaf-71a5142e546b"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1537,8 +1622,17 @@
       "metadata": {
         "id": "idCWebDBYC45"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "7️⃣ Splitting our data into Train and Test Subset."
+      ],
+      "metadata": {
+        "id": "aieAYI4aQY70"
+      }
     },
     {
       "cell_type": "code",
@@ -1551,7 +1645,7 @@
       "metadata": {
         "id": "hE4rZl3MZTw2"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1566,7 +1660,7 @@
         "id": "7pFIVlnJZT0c",
         "outputId": "d9cddd4c-d848-4d9e-a4f1-c77e35809678"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1590,7 +1684,7 @@
         "id": "9vU1vqOGZ31J",
         "outputId": "23c6a775-5c3b-4f19-ae11-303421d04f29"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1612,7 +1706,7 @@
       "metadata": {
         "id": "lePHjKmiZT3m"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1627,7 +1721,7 @@
         "id": "sRwRwKMjUveq",
         "outputId": "a48d2a0b-610e-4cf7-c411-20d3ad617d99"
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1642,6 +1736,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "8️⃣ Function for Model Evaluation."
+      ],
+      "metadata": {
+        "id": "iSRNJep4Qfe0"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "### Create the Stacked LSTM model\n",
@@ -1652,7 +1755,7 @@
       "metadata": {
         "id": "K1KIFkU5Uf-t"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1668,47 +1771,17 @@
       "metadata": {
         "id": "jupWWK3IZsX0"
       },
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": []
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "source": [
-        "model.summary()"
+        "9️⃣ Model Building."
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "ptBb5n30ZvR4",
-        "outputId": "31ea9864-5ff1-49a8-8c9f-1eeaebc25db0"
-      },
-      "execution_count": 41,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Model: \"sequential_2\"\n",
-            "_________________________________________________________________\n",
-            " Layer (type)                Output Shape              Param #   \n",
-            "=================================================================\n",
-            " lstm_6 (LSTM)               (None, 100, 50)           10400     \n",
-            "                                                                 \n",
-            " lstm_7 (LSTM)               (None, 100, 50)           20200     \n",
-            "                                                                 \n",
-            " lstm_8 (LSTM)               (None, 50)                20200     \n",
-            "                                                                 \n",
-            " dense_2 (Dense)             (None, 1)                 51        \n",
-            "                                                                 \n",
-            "=================================================================\n",
-            "Total params: 50,851\n",
-            "Trainable params: 50,851\n",
-            "Non-trainable params: 0\n",
-            "_________________________________________________________________\n"
-          ]
-        }
-      ]
+        "id": "NkJKR4lxRem9"
+      }
     },
     {
       "cell_type": "code",
@@ -1722,7 +1795,7 @@
         "id": "wDkPwk-CZypy",
         "outputId": "c7ac9e5d-110e-44a3-d8a6-8f20aada3817"
       },
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1956,7 +2029,7 @@
         "id": "9HRxHu_7aLFL",
         "outputId": "20cceaa3-7ea3-458f-b5da-44408e94d153"
       },
-      "execution_count": 63,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1982,7 +2055,7 @@
         "id": "u8HheTxQXrrN",
         "outputId": "0b15f837-12ce-4e42-9f9f-fc91ff28069d"
       },
-      "execution_count": 56,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2011,7 +2084,7 @@
         "id": "JFg1JeYDaLac",
         "outputId": "4f08f8ce-9e67-4a99-aee8-18758ab217e1"
       },
-      "execution_count": 54,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2038,7 +2111,7 @@
         "id": "VcbGJ9doaSNo",
         "outputId": "c710ca71-7ea1-4b6c-a38b-8e1d1af51bda"
       },
-      "execution_count": 55,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2051,6 +2124,19 @@
           "execution_count": 55
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "1️⃣0️⃣Conclusion."
+      ],
+      "metadata": {
+        "id": "euQjFDkhRbN9"
+      }
     },
     {
       "cell_type": "code",
@@ -2081,7 +2167,7 @@
         "id": "P7lDeL-3Z38p",
         "outputId": "46cef14b-30ab-42aa-c07b-730cc2c2cc3c"
       },
-      "execution_count": 68,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2094,15 +2180,6 @@
           "metadata": {}
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "G9tBJAybaELA"
-      },
-      "execution_count": null,
-      "outputs": []
     }
   ]
 }
