--- a/Credit_card_fraud_detection.ipynb
+++ b/Credit_card_fraud_detection.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPo1JSs2hNAE5x7sKuK9Lrr",
+      "authorship_tag": "ABX9TyPjJhOyXYtF3ZWXTLD2jT8A",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -104,7 +104,7 @@
         "from sklearn.ensemble import RandomForestClassifier\n",
         "from sklearn.linear_model import LogisticRegression\n",
         "from sklearn.svm import SVC\n",
-        "from sklearn.metrics import accuracy_score,precision_score,recall_score,f1_score,confusion_matrix\n",
+        "from sklearn.metrics import accuracy_score,precision_score,recall_score,f1_score\n",
         "from sklearn.metrics import confusion_matrix"
       ]
     },
